test_suite/tests/ui/fail_with_invalid_codec_attrs.stderr
error: Invalid attribute on field, only `#[codec(skip)]`, `#[codec(compact)]` and `#[codec(encoded_as = "$EncodeAs")]` are accepted.
 --> $DIR/fail_with_invalid_codec_attrs.rs:7:7
  |
7 |     #[codec(skip, compact)]
  |       ^^^^^^^^^^^^^^^^^^^^

error: Invalid attribute on field, only `#[codec(skip)]`, `#[codec(compact)]` and `#[codec(encoded_as = "$EncodeAs")]` are accepted.
  --> $DIR/fail_with_invalid_codec_attrs.rs:13:19
   |
13 |     Thing(#[codec(index = 3)] u32),
   |                   ^^^^^^^^^

error: expected literal
  --> $DIR/fail_with_invalid_codec_attrs.rs:18:21
   |
18 |     #[codec(index = a)]
   |                     ^

error: proc-macro derive panicked
  --> $DIR/fail_with_invalid_codec_attrs.rs:16:18
   |
16 | #[derive(Encode, TypeInfo)]
   |                  ^^^^^^^^
   |
   = help: message: scale-info: Bad index in `#[codec(index = …)]`, see `parity-scale-codec` error: Error("expected literal")

error: expected literal
  --> $DIR/fail_with_invalid_codec_attrs.rs:24:25
   |
24 |     #[codec(encode_as = u8, compact)]
   |                         ^^

error: proc-macro derive panicked
  --> $DIR/fail_with_invalid_codec_attrs.rs:22:18
   |
22 | #[derive(Encode, TypeInfo)]
   |                  ^^^^^^^^
   |
   = help: message: scale-info: Bad index in `#[codec(index = …)]`, see `parity-scale-codec` error: Error("expected literal")
